tests/baselines/reference/parserObjectCreationArrayLiteral1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/parserObjectCreationArrayLiteral1.ts (2 errors) ====
    new Foo[];
           ~~
!!! error TS1150: 'new T[]' cannot be used to create an array. Use 'new Array<T>()' instead.
        ~~~
!!! error TS2304: Cannot find name 'Foo'.